import "client.comm.proto";
package client;

message move_info{
    required role_data           rds        = 1;  // 角色信息
    repeated client_map_pos      mps        = 2;  // 移动节点
}

// 其它人物和怪物位置和移动信息通知
message role_move_msg {
    enum MOVE_TYPE
    {
        CLIENT_NOTIFY = 0;  // 0=路径通知
        MOVE_CONFIRM  = 1;  // 节点确认
    }
    
    required MOVE_TYPE    move_type = 1;  
    repeated move_info    mi        = 2; 
    optional uint32       timestamp = 3; // 客户端发送移动的服务器的时间戳，通过对时协议拿到的服务器时间戳
	
    optional server_head svr_head = 1000; // 服务端填写项，客户端不需要关心也不必填写数据
}

// 位置确认信息，既用于客户端上报当前位置，也用于服务端位置纠错后发送给客户端
message role_postion_msg {
    required int32       x		   = 1;
    required int32       y		   = 2;
    required int32       z		   = 3;
    required uint32      timestamp = 4[default = 0];   // 时间戳，以10ms为单位,通过对时协议拿到的服务器时间戳
    optional role_data   rd        = 5;
    optional server_head svr_head  = 1000; // 服务端填写项，客户端不需要关心也不必填写数据
}




